--- a/main.html
+++ b/main.html
@@ -12,7 +12,7 @@
 </script>
 
 </body>
-	<marquee>Welcome to Acciojobs</marquee>
+	<marquee behavior="" direction="left">Welcome to Acciojobs</marquee>
 	
 	<h2>Brute Force vs. Optimization</h2>
 	<p>We can say that optimization is one step further than the brute-force method of problem solving…</p>
