--- a/main.html
+++ b/main.html
@@ -12,7 +12,7 @@
 </script>
 
 </body>
-	<marquee behavior="" direction="left"><h1>Welcome to Acciojobs</h1></marquee>
+	<marquee behavior="" direction="left"><h1>Welcome to Acciojobs!</h1></marquee>
 	
 	<h2>Brute Force vs. Optimization</h2>
 	<p>We can say that optimization is one step further than the brute-force method of problem solving…</p>
